Add GifBox Control

--- a/CookPopularControl/Resources/Dictionaries/SystemConstValue.xaml
+++ b/CookPopularControl/Resources/Dictionaries/SystemConstValue.xaml
@@ -6,6 +6,7 @@
     <sys:Double x:Key="DefaultFontSize">14</sys:Double>
     <sys:Double x:Key="LargeFontSize">16</sys:Double>
 
+    <sys:Double x:Key="Double20Value">20</sys:Double>
     <sys:Double x:Key="Double26Value">26</sys:Double>
     <sys:Double x:Key="Double30Value">30</sys:Double>
     
