--- a/TestDemo/MainWindow.xaml
+++ b/TestDemo/MainWindow.xaml
@@ -2,10 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:TestDemo"
+        xmlns:gif="http://wpfanimatedgif.codeplex.com"
+        xmlns:local="clr-namespace:TestDemo.Demos"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
-        xmlns:gif="http://wpfanimatedgif.codeplex.com"
         Title="MainWindow"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
@@ -13,7 +13,7 @@
         Height="800"
         Foreground="DodgerBlue"
         Background="#FFFFFF">
-    <!--  Style="{StaticResource BaseChromeWindowStyle}"  -->
+    <!--Style="{StaticResource BaseChromeWindowStyle}"-->
 
     <Window.Resources>
         <ResourceDictionary>
@@ -29,11 +29,8 @@
     </Window.Resources>
 
     <Grid>
-        <local:ButtonDemo />
-        <!--<Image gif:ImageBehavior.AnimatedSource="/Resources/Gif/programmer.gif"
-               gif:ImageBehavior.AnimationSpeedRatio="10"
-               Width="100" Height="100" />-->
-        <!--<CheckBox Content="我是Chance" Width="300" Height="60"/>-->
+        <!--<local:ButtonDemo />-->
+        <local:GifBoxDemo />
     </Grid>
 
 
