--- a/CookPopularControl/Themes/DefaultPopularControl.xaml
+++ b/CookPopularControl/Themes/DefaultPopularControl.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:gifbox="clr-namespace:CookPopularControl.Controls.Animation">
+                    xmlns:gifbox="clr-namespace:CookPopularControl.Controls.Animation"
+                    xmlns:loading="clr-namespace:CookPopularControl.Controls.Animation.Loading">
 
     <ResourceDictionary.MergedDictionaries>
         <!--Original Control-->
@@ -12,6 +13,7 @@
 
         <!--Extension Control-->
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/GifBoxStyle.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/LoadingStyle.xaml" />
         
         <!--Other Resource Dictionaries-->
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/GeometryFigure.xaml"/>
@@ -26,5 +28,15 @@
     <!--<Style x:Key="{x:Type CheckBox}" TargetType="{x:Type CheckBox}" BasedOn="{StaticResource DefaultButtonStyle}"/>-->
 
     <Style x:Key="{x:Type gifbox:GifBox}" TargetType="{x:Type gifbox:GifBox}" BasedOn="{StaticResource DefaultGifBoxStyle}"/>
+    <!--<Style x:Key="{x:Type loading:DotLoading}" TargetType="{x:Type loading:DotLoading}" BasedOn="{StaticResource BaseLoadingStyle}"/>-->
+
+    <Style x:Key="{x:Type loading:DotLoading}" TargetType="{x:Type loading:DotLoading}">
+        <Setter Property="DotCount" Value="5" />
+        <Setter Property="DotInterval" Value="20" />
+        <Setter Property="DotRadius" Value="10" />
+        <Setter Property="DotRunSpeed" Value="1.5" />
+        <Setter Property="DotStroke" Value="DodgerBlue" />
+        <Setter Property="DotStrokeThickness" Value="1" />
+    </Style>
 
 </ResourceDictionary>
