--- a/CookPopularControl/Themes/LoadingStyle.xaml
+++ b/CookPopularControl/Themes/LoadingStyle.xaml
@@ -11,11 +11,10 @@
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/SystemConstValue.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style x:Key="BaseLoadingStyle" TargetType="{x:Type loading:DotLoading}">
+    <Style x:Key="{x:Type loading:DotLoadingBase}" TargetType="{x:Type loading:DotLoadingBase}">
         <Setter Property="Width" Value="80" />
         <Setter Property="Height" Value="80" />
         <Setter Property="Foreground" Value="{StaticResource PrimaryColorTheme}" />
-        <Setter Property="LoadingTrack" Value="Circle" />
         <Setter Property="IsDotRunning" Value="True" />
         <Setter Property="DotCount" Value="6" />
         <Setter Property="DotInterval" Value="14" />
@@ -29,35 +28,46 @@
         <Setter Property="DotStrokeThickness" Value="1" />
     </Style>
 
-    <Style x:Key="CircleLoadingStyle" TargetType="{x:Type loading:DotLoading}" BasedOn="{StaticResource BaseLoadingStyle}"/>
-    <Style x:Key="FullCircleLoadingStyle" TargetType="{x:Type loading:DotLoading}" BasedOn="{StaticResource BaseLoadingStyle}">
+    <Style x:Key="DefaultCircleLoadingStyle" TargetType="{x:Type loading:DotCircleLoading}" BasedOn="{StaticResource {x:Type loading:DotLoadingBase}}"/>
+    <Style x:Key="FullCircleLoadingStyle" TargetType="{x:Type loading:DotCircleLoading}" BasedOn="{StaticResource {x:Type loading:DotLoadingBase}}">
         <Setter Property="DotCount" Value="20" />
         <Setter Property="DotDelayTime" Value="0" />
         <Setter Property="IsDotRadiusEqualScale" Value="True" />
     </Style>
-    <Style x:Key="LineLoadingStyle" TargetType="{x:Type loading:DotLoading}" BasedOn="{StaticResource BaseLoadingStyle}">
-        <Setter Property="Width" Value="200" />
-        <Setter Property="Height" Value="{Binding RelativeSource={RelativeSource Mode=Self},Path=DotDiameter}" />
-        <Setter Property="LoadingTrack" Value="Line" />
-    </Style>
-
-    
-    <Style x:Key="CircleLoadingRunAsConstantStyle" TargetType="{x:Type loading:DotLoading}" BasedOn="{StaticResource CircleLoadingStyle}">
+    <Style x:Key="CircleLoadingRunAsConstantStyle" TargetType="{x:Type loading:DotCircleLoading}" BasedOn="{StaticResource DefaultCircleLoadingStyle}">
         <Setter Property="IsDotRunAsConstant" Value="True" />
         <Setter Property="DotDelayTime" Value="0" />
         <Setter Property="DotDuration" Value="0:0:2" />
         <Setter Property="DotRunSpeed" Value="1.5" />
     </Style>
-    <Style x:Key="FullCircleLoadingRunAsConstantStyle" TargetType="{x:Type loading:DotLoading}" BasedOn="{StaticResource FullCircleLoadingStyle}">
+    <Style x:Key="FullCircleLoadingRunAsConstantStyle" TargetType="{x:Type loading:DotCircleLoading}" BasedOn="{StaticResource FullCircleLoadingStyle}">
         <Setter Property="IsDotRunAsConstant" Value="True" />
         <Setter Property="DotDelayTime" Value="0" />
         <Setter Property="DotDuration" Value="0:0:2" />
         <Setter Property="DotRunSpeed" Value="2" />
     </Style>
-    <Style x:Key="LineLoadingRunAsContantStyle" TargetType="{x:Type loading:DotLoading}" BasedOn="{StaticResource LineLoadingStyle}">
+
+
+    <Style x:Key="DefaultLineLoadingStyle" TargetType="{x:Type loading:DotLineLoading}" BasedOn="{StaticResource {x:Type loading:DotLoadingBase}}">
+        <Setter Property="Width" Value="200" />
+        <Setter Property="Height" Value="{Binding RelativeSource={RelativeSource Mode=Self},Path=DotDiameter}" />
+    </Style>
+    <Style x:Key="LineLoadingRunAsContantStyle" TargetType="{x:Type loading:DotLineLoading}" BasedOn="{StaticResource DefaultLineLoadingStyle}">
         <Setter Property="IsDotRunAsConstant" Value="True" />
         <Setter Property="DotDelayTime" Value="50" />
         <Setter Property="DotDuration" Value="0:0:2" />
     </Style>
+    
+    
+
+    <Style x:Key="DefaultPendulumLoadingStyle" TargetType="{x:Type loading:DotPendulumLoading}" BasedOn="{StaticResource {x:Type loading:DotLoadingBase}}">
+        <Setter Property="Height" Value="100"/>
+        <Setter Property="Width" Value="100"/>
+        <Setter Property="DotCount" Value="5" />
+        <Setter Property="DotDuration" Value="0:0:1" />
+        <Setter Property="DotDelayTime" Value="0" />
+        <Setter Property="loading:DotPendulumLoading.PendulumSwingAngle" Value="20" />
+    </Style>
+
 
 </ResourceDictionary>
