--- a/CookPopularControl/Themes/LoadingStyle.xaml
+++ b/CookPopularControl/Themes/LoadingStyle.xaml
@@ -59,15 +59,20 @@
     </Style>
     
     
-
     <Style x:Key="DefaultPendulumLoadingStyle" TargetType="{x:Type loading:DotPendulumLoading}" BasedOn="{StaticResource {x:Type loading:DotLoadingBase}}">
-        <Setter Property="Height" Value="100"/>
-        <Setter Property="Width" Value="100"/>
+        <Setter Property="Height" Value="50"/>
+        <Setter Property="Width" Value="200"/>
         <Setter Property="DotCount" Value="5" />
-        <Setter Property="DotDuration" Value="0:0:1" />
+        <Setter Property="DotRunSpeed" Value="2" />
         <Setter Property="DotDelayTime" Value="0" />
-        <Setter Property="loading:DotPendulumLoading.PendulumSwingAngle" Value="20" />
+        <Setter Property="DotDuration" Value="0:0:1" />
+        <Setter Property="loading:DotPendulumLoading.PendulumSwingAngle" Value="100" />
     </Style>
-
-
+    <Style x:Key="PendulumLoadingRunAsContantStyle" TargetType="{x:Type loading:DotPendulumLoading}" BasedOn="{StaticResource DefaultPendulumLoadingStyle}">
+        <Setter Property="IsDotRunAsConstant" Value="True" />
+        <Setter Property="DotDelayTime" Value="100" />
+        <Setter Property="DotRunSpeed" Value="1" />
+        <Setter Property="DotDuration" Value="0:0:0.5" />
+    </Style>
+    
 </ResourceDictionary>
