--- a/TestDemo/Demos/LoadingDemo.xaml
+++ b/TestDemo/Demos/LoadingDemo.xaml
@@ -9,15 +9,27 @@
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Background="Orange">
         <WrapPanel Margin="0,20,0,0">
-            <pc:DotLoading Style="{StaticResource CircleLoadingStyle}" Margin="20,0"/>
-            <pc:DotLoading Style="{StaticResource FullCircleLoadingStyle}" Margin="20,0"/>
-            <pc:DotLoading Style="{StaticResource CircleLoadingRunAsConstantStyle}" Margin="20,0" IsDotRunning="False"/>
-            <pc:DotLoading Style="{StaticResource FullCircleLoadingRunAsConstantStyle}" Margin="20,0" />
+            <pc:DotCircleLoading Style="{StaticResource DefaultCircleLoadingStyle}" Margin="20,0"/>
+            <pc:DotCircleLoading Style="{StaticResource FullCircleLoadingStyle}" Margin="20,0"/>
+            <pc:DotCircleLoading Style="{StaticResource CircleLoadingRunAsConstantStyle}" Margin="20,0" IsDotRunning="False"/>
+            <pc:DotCircleLoading Style="{StaticResource FullCircleLoadingRunAsConstantStyle}" Margin="20,0" />
         </WrapPanel>
         <StackPanel Width="480" Margin="0,20,0,0">
-            <pc:DotLoading Width="480" Style="{StaticResource LineLoadingStyle}"/>
-            <pc:DotLoading Width="480" Style="{StaticResource LineLoadingRunAsContantStyle}" Margin="0,20"/>
+            <pc:DotLineLoading Width="480" Style="{StaticResource DefaultLineLoadingStyle}"/>
+            <pc:DotLineLoading Width="480" Style="{StaticResource LineLoadingRunAsContantStyle}" Margin="0,20"/>
         </StackPanel>
+        <WrapPanel Margin="0,20,0,0">
+            <pc:DotPendulumLoading Style="{StaticResource DefaultPendulumLoadingStyle}" Margin="20,0"/>
+            <pc:DotPendulumLoading Style="{StaticResource DefaultPendulumLoadingStyle}" Margin="20,0"
+                                   pc:DotPendulumLoading.PendulumSwingAngle="0"
+                                   pc:DotPendulumLoading.PendulumSlipDistance="50"/>
+        </WrapPanel>
+        <WrapPanel Margin="0,20,0,0">
+            <pc:DotPendulumLoading Style="{StaticResource PendulumLoadingRunAsContantStyle}" Margin="20,0"/>
+            <pc:DotPendulumLoading Style="{StaticResource PendulumLoadingRunAsContantStyle}" Margin="20,0"
+                                   pc:DotPendulumLoading.PendulumSwingAngle="0"
+                                   pc:DotPendulumLoading.PendulumSlipDistance="50"/>
+        </WrapPanel>
     </StackPanel>
 
 
